--- a/requirements.txt
+++ b/requirements.txt
@@ -124,6 +124,7 @@ python-docx==0.8.11
 python-magic==0.4.27
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+PyPDF2==3.0.1
 PyYAML==6.0
 pyzmq==25.1.1
 referencing==0.30.2
