--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ Markdown==3.5.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.6.3
 mdurl==0.1.2
 mmh3==3.1.0
 multidict==6.0.4
@@ -63,6 +64,7 @@ Pillow==10.1.0
 pinecone-client==3.0.0
 pinecone-text==0.6.0
 pipreqs==0.4.13
+plotly==5.12.0
 protobuf==4.25.0
 pyarrow==14.0.1
 pycparser==2.21
@@ -103,6 +105,7 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
+umap-learn==0.5.5
 unstructured==0.9.2
 urllib3==2.0.7
 validators==0.22.0
